--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         #container {
             position: absolute;
-            top: 50px;
+            top: 0px;
             left: 0;
             right: 0;
             bottom: 0;
@@ -343,12 +343,39 @@
                 </div>
             </div>
         </div>
+        
+        <div class="controls-section">
+            <div class="controls-header chevron">Campfire</div>
+            <div class="controls-content">
+                <div class="control-row">
+                    <div class="control-label">Fire Intensity</div>
+                    <div class="control-input">
+                        <input type="range" id="fire-intensity" min="0.5" max="2.5" step="0.1" value="1.5">
+                        <div class="value-display" id="fire-intensity-value">1.5</div>
+                    </div>
+                </div>
+                <div class="control-row">
+                    <div class="control-label">Fire Color</div>
+                    <div class="control-input">
+                        <input type="color" id="fire-color" value="#FF6600">
+                    </div>
+                </div>
+                <div class="control-row">
+                    <div class="control-label">Smoke Amount</div>
+                    <div class="control-input">
+                        <input type="range" id="smoke-amount" min="10" max="100" step="5" value="50">
+                        <div class="value-display" id="smoke-amount-value">50</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="js/utils.js"></script>
     <script src="js/terrain.js"></script>
     <script src="js/trees.js"></script>
     <script src="js/clouds.js"></script>
+    <script src="js/campfire.js"></script>
     <script src="js/controls.js"></script>
     <script src="js/app.js"></script>
 </body>
